--- a/cdk/package.json
+++ b/cdk/package.json
@@ -14,10 +14,14 @@
     "jest": "^26.4.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigatewayv2-alpha": "^2.8.0-alpha.0",
+    "@aws-cdk/aws-apigatewayv2-integrations": "^1.140.0",
+    "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.8.0-alpha.0",
     "@aws-cdk/aws-dynamodb": "^1.140.0",
     "@aws-cdk/aws-s3": "^1.140.0",
     "@aws-cdk/core": "^1.140.0",
     "aws-cdk-lib": "^2.8.0",
+    "aws-sdk": "^2.1062.0",
     "constructs": "^10.0.0"
   }
 }
